syntax = "proto3";

option go_package = "github.com/troydai/grpc-reconnect/protos/echopb";


service Echo {
  rpc Echo(EchoRequest) returns (EchoResponse) {}
  rpc Status(StatusRequest) returns (StatusResponse) {}
}

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}

message StatusRequest {
}

message StatusResponse {
  string status = 1;
}
